<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Tie Us</string>
    <string name="action_reset_help_messages" translatable="true">Reset help messages</string>
    <string name="action_sync" translatable="true">Synchronise</string>
    <string name="action_add" translatable="true">Add action</string>
    <string name="action_edit_contact" translatable="true">Edit contact</string>
    <string name="pref_done_action_aware_key" translatable="false">done_action_aware_key</string>
    <string name="pref_delete_action_aware_key" translatable="false">delete_action_aware_key</string>
    <string name="pref_message_idx_status_key" translatable="false">pref_message_idx_status</string>
    <string name="pref_last_user_satisfactions_confirm_key" translatable="false">
        pref_last_user_satisfactions_confirm_key</string>
    <string name="pref_last_notification_key" translatable="false">last_notification</string>
    <string name="pref_sync_status_key" translatable="false">sync_status_key</string>
    <string name="pref_network_status_key" translatable="false">network_status</string>
    <string name="tag_fragment_board" translatable="false">board_fragment</string>
    <string name="keep" translatable="false">keep</string>
    <string name="sms_intent_type" translatable="false">vnd.android-dir/mms-sms</string>
    <string name="pref_sync_stat_contact_added_key" translatable="false">pref_sync_stat_contact_added_key</string>
    <string name="pref_sync_stat_contact_updated_key" translatable="false">pref_sync_stat_contact_updated_key</string>
    <string name="pref_sync_stat_contact_deleted_key" translatable="false">pref_sync_stat_contact_deleted_key</string>
    <string name="pref_firebase_stat_send_key" translatable="false">pref_firebase_stat_send_key</string>
    <string name="accent" translatable="false">#F50057</string>
    <string name="unscheduled_people" translatable="true">Unscheduled people</string>
    <string name="delayed" translatable="true">Delayed</string>
    <string name="today" translatable="true">Today</string>
    <string name="done" translatable="true">Done today</string>
    <string name="next" translatable="true">Next</string>
    <string name="next_actions" translatable="true">Next actions</string>
    <string name="select_vector" translatable="true">Select a vector</string>
    <string name="done_actions" translatable="true">Done actions</string>
    <string name="fill_in_response_time_limit_title" translatable="true">People recently worked for</string>
    <string name="satisfaction_to_update_title" translatable="true">Satisfaction face to update</string>
    <string name="fill_up_frequency_title" translatable="true">Frequency of contact to set up</string>
    <string name="ask_for_response_title" translatable="true">Unanswering people</string>
    <string name="nearby_decreased_satisfaction_title" translatable="true">They are soon to turn unsatisfied !</string>
    <string name="decreased_satisfaction_title" translatable="true">They decreased their satisfaction state today!</string>
    <string name="satisfied" translatable="true">Satisfied</string>
    <string name="neutral" translatable="true">Neutral</string>
    <string name="unsatisfied" translatable="true">Dissatisfied</string>
    <string name="unfollowed" translatable="true">Unfollowed</string>
    <string name="real_life_meeting" translatable="true">Real life meeting</string>
    <string name="due_date" translatable="true">Due date</string>
    <string name="ok" translatable="true">Ok</string>
    <string name="response" translatable="true">Answer : </string>
    <string name="response2" translatable="true">Answer</string>
    <string name="frequency" translatable="true">Frequency</string>
    <string name="expected_response" translatable="true">Expected answer ?</string>
    <string name="_24h" translatable="false">24h</string>
    <string name="_48h" translatable="false">48h</string>
    <string name="_4days" translatable="true">4 days</string>
    <string name="_1week" translatable="true">1 week</string>
    <string name="_2weeks" translatable="true">2 weeks</string>
    <string name="_1month" translatable="true">1 month</string>
    <string name="_3months" translatable="true">3 months</string>
    <string name="_6months" translatable="true">6 months</string>
    <string name="_1year" translatable="true">1 year</string>
    <string name="expected_frequency" translatable="true">Frequency ?</string>
    <string name="within_24h" translatable="true">Within 24h</string>
    <string name="within_48h" translatable="true">Within 48h</string>
    <string name="within_4_days" translatable="true">Within 4 days</string>
    <string name="within_a_week" translatable="true">Within a week</string>
    <string name="within_2_weeks" translatable="true">Within 2 weeks</string>
    <string name="everyday" translatable="true">Everyday</string>
    <string name="every_week" translatable="true">Every week</string>
    <string name="every_2weeks" translatable="true">Every 2 weeks</string>
    <string name="every_months" translatable="true">Every month</string>
    <string name="every_3months" translatable="true">Every 3 months</string>
    <string name="every_6months" translatable="true">Every 6 months</string>
    <string name="every_year" translatable="true">Every year</string>
    <string name="sms" translatable="true">Small text messages</string>
    <string name="outside_event" translatable="true"><xliff:g>%1$s</xliff:g> is an outside event</string>
    <string name="shining" translatable="true">Shining</string>
    <string name="slightly_cloudy" translatable="true">Slightly cloudy</string>
    <string name="cloudy" translatable="true">Cloudy</string>
    <string name="rainy" translatable="true">Rainy</string>
    <string name="unknown_satisfaction_interrogation_mark" translatable="false">\?</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="terminated" translatable="false">terminated at 11:00</string>
    <string name="bernard" translatable="false">Bernard Lepage</string>
    <string name="_30_sept" translatable="false">30 sept.</string>
    <string name="select_action" translatable="true">Add actions to start following this contact</string>
    <string name="how_to_done_action" translatable="true">Long press the action to mark it as complete or uncomplete</string>
    <string name="how_to_delete_action" translatable="true">Swipe action to the right to delete it</string>
    <string name="no_contacts_on_phone" translatable="true">Start adding contact on your phone to make the most of this app</string>
    <string name="manage_unscheduled_contact_message" translatable="true">You have <xliff:g>%1$d</xliff:g> contacts with no actions registered. Add actions on their profile or mark them as unfollowed.</string>
    <string name="manage_unscheduled_person" translatable="true"><xliff:g>%1$s</xliff:g> has no actions registered. Add actions or mark her/him profile as unfollowed.</string>
    <string name="fill_in_time_limit_response_message" translatable="true">You recently worked for <xliff:g>%1$d</xliff:g> contacts. When do you expect to see them answering ? Fill the answer time limit on their profile.</string>
    <string name="fill_in_time_limit_response_person" translatable="true">You recently worked for <xliff:g>%1$s</xliff:g> When do you expect to see her/him answering ? Fill the answer time limit on her/his profile.</string>
    <string name="update_satisfaction_face_message" translatable="true">Are those <xliff:g>%1$d</xliff:g>
        contacts satisfied by your actions ? </string>
    <string name="update_satisfaction_face_person" translatable="true">How is <xliff:g>%1$s</xliff:g> going ? </string>
    <string name="fill_up_frequency_message" translatable="true">How often would you like to
        interact with those  <xliff:g>%1$d</xliff:g> contacts ? Fill up frequency on their profile.</string>
    <string name="fill_up_frequency_person" translatable="true">How often would you like to hear from  <xliff:g>%1$s</xliff:g> ? Fill up frequency on her/his profile.</string>
    <string name="ask_for_response_message" translatable="true">Still no answer from those <xliff:g>%1$d</xliff:g> contacts ? Ask them for a response or move them to unfollowed.</string>
    <string name="ask_for_response_person" translatable="true">Still no answer from <xliff:g>%1$s</xliff:g> ? Ask him/her for a response or move him/her to unfollowed.</string>
    <string name="nearby_decreased_satisfaction_message" translatable="true">You have <xliff:g>%1$d</xliff:g>  contacts that may turn unsatisfied if you don\'t interact with them. Take action, it\'s still time ! </string>
    <string name="nearby_decreased_satisfaction_person" translatable="true"><xliff:g>%1$s</xliff:g> may turn unsatisfied if you don\'t interact with her/him. Take action, it\'s still time ! </string>
    <string name="decreased_satisfaction_message" translatable="true">Those <xliff:g>%1$d</xliff:g>
        contacts decreased their satisfaction state today.</string>
    <string name="decreased_satisfaction_person" translatable="true"><xliff:g>%1$s</xliff:g> decreased his/her satisfaction state today.</string>
    <string name="no_people_to_follow" translatable="true">Start following contacts by choosing a
        satisfaction face on their profile</string>
    <string name="action_completed" translatable="true">Action completed</string>
    <string name="action_uncompleted" translatable="true">Action uncompleted</string>
    <string name="action_deleted" translatable="true">Action deleted</string>
    <string name="completed" translatable="true"><xliff:g>%1$s</xliff:g> at <xliff:g>%2$s</xliff:g></string>
    <string name="app_not_installed" translatable="true">App <xliff:g>%1$s</xliff:g> is not installed on your device</string>
    <string name="no_contacts_app" translatable="true">No app found for editing contacts on your device.</string>
    <string name="no_sms_app" translatable="true">No app found for writing text messages on your device.</string>
    <string name="synchronising" translatable="true">Synchronising…</string>
    <string name="no_internet"  translatable="true">Need internet connection to synchronise contact list</string>
    <string name="action_title1">Introduce</string>
    <string name="action_title2">Inform</string>
    <string name="action_title3">Make an offer</string>
    <string name="action_title4">Give feedback</string>
    <string name="action_name1">Get to know who they are and what they are looking for</string>
    <string name="action_name2">Tell who you are and what you can do</string>
    <string name="action_name3">Inform of an event</string>
    <string name="action_name4">Give expertise</string>
    <string name="action_name5">Inform of an existing tool</string>
    <string name="action_name6">Inform of a connection you have that may help</string>
    <string name="action_name7">Make an offer of work</string>
    <string name="action_name8">Make an offer of money</string>
    <string name="action_name9">Offer a present</string>
    <string name="action_name10">Upvote their competence</string>
    <string name="action_name11">Encourage</string>
    <string name="action_name12">Thanks</string>
    <string name="vector_package_gmail" translatable="false">com.google.android.gm</string>
    <string name="vector_package_google_plus" translatable="false">com.google.android.apps.plus</string>
    <string name="vector_package_facebook" translatable="false">com.facebook.katana</string>
    <string name="vector_package_linkedin" translatable="false">com.linkedin.android</string>
    <string name="vector_package_outlook" translatable="false">com.microsoft.office.outlook</string>
    <string name="vector_package_yahoo" translatable="false">com.yahoo.mobile.client.android.mail</string>
</resources>