<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/everyday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/everyday"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryLight"/>

        <TextView
            android:id="@+id/every_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/every_week"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryLight"/>

        <TextView
            android:id="@+id/every_2weeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/every_2weeks"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryLight"/>
        <TextView
            android:id="@+id/every_months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/every_months"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryLight"/>
        <TextView
            android:id="@+id/every_3months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/every_3months"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryLight"/>
        <TextView
            android:id="@+id/every_6months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/every_6months"
            android:textAppearance="?android:textAppearanceLarge"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryLight"/>
        <TextView
            android:id="@+id/every_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/every_year"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>
</ScrollView>