<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/happy_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal">

        <android.support.v4.widget.Space
            android:id="@+id/happy_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
           android:layout_centerHorizontal="true"  />

        <ImageView
            android:id="@+id/happy"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toLeftOf="@id/happy_center"
            android:layout_marginRight="@dimen/spacing_small"
            android:background="@drawable/ic_sentiment_satisfied_black_48dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_toRightOf="@id/happy"
            android:text="@string/satisfied"
            android:textAppearance="?android:textAppearanceLarge"           />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/neutral_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal">

        <android.support.v4.widget.Space
            android:id="@+id/neutral_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"  />

        <ImageView
            android:id="@+id/neutral"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toLeftOf="@id/neutral_center"
            android:layout_marginRight="@dimen/spacing_small"
            android:background="@drawable/ic_sentiment_neutral_black_48dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_toRightOf="@id/neutral"
            android:text="@string/neutral"
            android:textAppearance="?android:textAppearanceLarge"           />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/dissatisfied_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal">

        <android.support.v4.widget.Space
            android:id="@+id/dissatisfied_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"  />

        <ImageView
            android:id="@+id/dissatisfied"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toLeftOf="@id/dissatisfied_center"
            android:layout_marginRight="@dimen/spacing_small"
            android:background="@drawable/ic_sentiment_dissatisfied_black_48dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_toRightOf="@id/dissatisfied"
            android:text="@string/unsatisfied"
            android:textAppearance="?android:textAppearanceLarge"           />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/untracked_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal">

        <android.support.v4.widget.Space
            android:id="@+id/untracked_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"  />

        <ImageView
            android:id="@+id/untracked"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toLeftOf="@id/untracked_center"
            android:layout_marginRight="@dimen/spacing_small"
            android:background="@drawable/ic_do_not_disturb_alt_black_48dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_toRightOf="@id/untracked"
            android:text="@string/unfollowed"
            android:textAppearance="?android:textAppearanceLarge"           />
    </RelativeLayout>

</LinearLayout>